# Django

./: README.md  bash.exe.stackdump  db.sqlite3  manage.py  pyproject.toml
bombeiros/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_ocorrencias_sexo.py  0002_rename_pressao_na_regiao_ou_vonatde_de_evacuar_anamnesegestacional_pressao_na_regiao_ou_vontade_de_e.py  0003_rename_existe_probabilidade_de_complicacoes_anamnesegestacional_existe_probabilidade_de_complicacoes.py  0004_alter_ocorrenciatipo_outro_and_more.py  0005_alter_ocorrenciatipo_queda_altura.py  0006_alter_problemasencontrados_outro_and_more.py  0007_alter_problemasencontrados_registroid.py  0008_registrarocorrencia_registroocorrenciatipo_and_more.py
