[tool.poetry]
name = "bombeirosdjango"
version = "0.1.0"
description = ""
authors = ["Brunoo47 <brunoostroskiprogramador@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-cors-headers = "^4.3.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
drf-spectacular = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
